# BG3-CMTY-Studio

./: .env.example  .gitignore  .gitleaks.toml  ATTRIBUTION.md  LICENSE  README.md  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  deny.toml  tauri.conf.json
src-tauri/benches/: staging.rs
src-tauri/bindings/: AnchorGroup.ts  AppError.ts  ChangeType.ts  ConversionResult.ts  CostResourceInfo.ts  CreateModResult.ts  DetectResult.ts  DetectedMod.ts  DiffEntry.ts  EntryKind.ts  ExportFileSpec.ts  ExportModResult.ts  ExtractionResult.ts  ListItemsInfo.ts  LocaEntry.ts  LsxAttribute.ts  LsxChildEntry.ts  LsxEntry.ts  LsxPreviewEntry.ts  ManualEntry.ts  NodeSchema.ts  OutputFormat.ts  RelevanceCheckResult.ts  ScanResult.ts  Section.ts  SectionInfo.ts  SerializeOptions.ts  StatEntryInfo.ts  StatsEntry.ts  VanillaEntryInfo.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/templates/: anubis_config.anc  anubis_module.anm  anubis_state.ann  constellations_config.clc  constellations_module.clm  constellations_state.cln  khonsu_basic_condition.khn  khonsu_context_condition.khn  mcm_blueprint.json  osiris_basic_goal.txt  osiris_quest_goal.txt  osiris_state_machine.txt  se_bootstrap_client.lua  se_bootstrap_server.lua  se_client_module.lua  se_config.json  se_server_module.lua  se_shared_module.lua
src-tauri/src/: db_manager.rs  error.rs  lib.rs  logging.rs  main.rs  validation.rs
src-tauri/src/allspark/: mod.rs
src-tauri/src/commands/: db.rs  diff.rs  export.rs  filesystem.rs  forge_api.rs  generate.rs  git_branch.rs  git_core.rs  git_remote.rs  http.rs  mod.rs  mod_import.rs  package.rs  paths.rs  project_settings.rs  rediff.rs  scan.rs  scripts.rs  secure_storage.rs  texture.rs
src-tauri/src/converters/: mod.rs  value_convert.rs
src-tauri/src/export/: behavior_script_handler.rs  config_handler.rs  delta.rs  khonsu_handler.rs  loca_handler.rs  lsx_handler.rs  meta_handler.rs  mod.rs  osiris_handler.rs  se_config_handler.rs  se_lua_handler.rs  stats_handler.rs  writer.rs
src-tauri/src/git/: credentials.rs  forge.rs  forge_gitea.rs  forge_github.rs  forge_gitlab.rs  mod.rs  rate_limits.rs  status.rs  types.rs
src-tauri/src/models/: effect.rs  mod.rs
src-tauri/src/pak/: compression.rs  convert.rs  entry.rs  error.rs  filter.rs  format.rs  manifest.rs  merge.rs  mod.rs  path.rs  reader.rs  stream.rs  writer.rs
src-tauri/src/parsers/: loca.rs  lsefx.rs  lsf.rs  lsfx.rs  lsx.rs  lsx_yaml.rs  meta.rs  mod.rs  stats_txt.rs
src-tauri/src/platform/: credentials.rs  deps_suggest.rs  errors.rs  http.rs  mod.rs  packaging.rs  progress.rs  rate_limiter.rs  validation.rs
src-tauri/src/platform/modio/: auth.rs  client.rs  commands.rs  deps.rs  files.rs  manage.rs  media.rs  meta.rs  mod.rs  mods.rs  (+2 more)
src-tauri/src/reference_db/: builder.rs  cross_db.rs  discovery.rs  fk_patterns.rs  mod.rs  pipeline.rs  queries.rs  schema.rs  staging.rs  types.rs
src-tauri/src/schema/: infer.rs
src-tauri/src/script/: mod.rs  scan.rs
src-tauri/src/serializers/: lsx_writer.rs  mod.rs
src-tauri/src/validation/: custom_linters.rs  mcm_blueprint.rs  mod.rs  osiris.rs  se_config.rs
src-tauri/tests/: export_integration.rs  forge_adapters.rs  forge_api.rs  git_branch.rs  git_core.rs  git_remote.rs  pak_compare.rs  pak_writer.rs  test_diagnose.rs  test_effect_parity.rs  test_reference_db.rs  test_size_budgets.rs
src-tauri/tests/fixtures/: divine_charvisuals.lsf
(+481 files in other folders)
